SignUp String Warning Fixed

--- a/SWD607_Assignment2/Resources/layout/SignUp.xml
+++ b/SWD607_Assignment2/Resources/layout/SignUp.xml
@@ -11,13 +11,14 @@
         android:layout_gravity="center"
         android:src="@drawable/aucklandrangerslogo2"
         android:layout_centerHorizontal="true"
+        android:contentDescription="@string/imageViewLogo"
         android:layout_marginTop="1dp"/>
     <TextView
         android:layout_width="match_parent"
-        android:text="Auckland Rangers"
+        android:text="@string/company_name"
         android:layout_height="70dp"
         android:gravity="center"
-        android:id="@+id/txtName"
+        android:id="@+id/txtCompany_Name"
         android:textColor="@android:color/background_dark"
         android:textSize="40dp"
         android:textStyle="bold"    
@@ -25,7 +26,7 @@
         />
     <TextView
         android:layout_width="match_parent"
-        android:text="Discover and Enjoy Food"
+        android:text="@string/company_subname"
         android:gravity="center"
         android:layout_height="35dp"
         android:textSize="20dp"
@@ -39,7 +40,7 @@
         android:id="@+id/textViewMyAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register Now"
+        android:text="@string/register_now"
         android:textSize="40sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"       
@@ -53,7 +54,8 @@
         android:id="@+id/editTextUsername"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:hint="  Username*"
+        android:hint="@string/enter_username"
+        android:inputType="text"
         android:textColorHint="@android:color/darker_gray"
         android:background="@drawable/white_button_border"
         android:textSize="25sp"       
@@ -68,7 +70,8 @@
         android:id="@+id/editTextPassword"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:hint="  Password*"
+        android:hint="@string/password_hint"
+        android:inputType="textVisiblePassword"
         android:textColorHint="@android:color/darker_gray"
         android:background="@drawable/white_button_border"
         android:paddingStart="15dp"
@@ -88,7 +91,8 @@
                 android:id="@+id/editTextFirstName"
                 android:layout_width="240dp"
                 android:layout_height="60dp"
-                android:hint="  First Name*"
+                android:hint="@string/first_name"
+                android:inputType="text"
                 android:paddingStart="15dp"
                 android:textColorHint="@android:color/darker_gray"
                 android:background="@drawable/white_button_border"
@@ -100,7 +104,8 @@
                 android:id="@+id/editTextLastName"
                 android:layout_width="270dp"
                 android:layout_height="60dp"
-                android:hint="  Last Name*"
+                android:hint="@string/last_name"
+                android:inputType="text"
                 android:paddingStart="15dp"
                 android:layout_toRightOf="@+id/editTextFirstName"
                 android:textColorHint="@android:color/darker_gray"
@@ -113,7 +118,8 @@
                 android:id="@+id/editTextMobileNumber"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:hint="  Mobile Number*"
+                android:hint="@string/mobile_number"
+                android:inputType="number"
                 android:paddingStart="15dp"
                 android:textColorHint="@android:color/darker_gray"
                 android:background="@drawable/white_button_border"
@@ -126,7 +132,8 @@
                 android:id="@+id/editTextEmailAddress"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
-                android:hint="  Email Address*"
+                android:hint="@string/email_address"
+                android:inputType="textEmailAddress"
                 android:paddingStart="15dp"
                 android:textColorHint="@android:color/darker_gray"
                 android:background="@drawable/white_button_border"
@@ -140,7 +147,7 @@
                 android:id="@+id/buttonSubmit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Submit"
+                android:text="@string/submit_button_text"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 android:background="@drawable/blue_button"
