--- a/SWD607_Assignment2/Resources/layout/SignIn.xml
+++ b/SWD607_Assignment2/Resources/layout/SignIn.xml
@@ -12,7 +12,6 @@
     android:layout_marginEnd="40dp"
     android:background="@drawable/light_blue_color_round">
 
-    <!-- Your existing layout -->
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,6 +24,7 @@
                 android:layout_height="160dp"
                 android:src="@drawable/aucklandrangerslogo3"                
                 android:layout_centerHorizontal="true"
+                android:contentDescription="@string/imageViewLogo"
                 android:layout_marginTop="30dp"/>
 
         <!-- Title : Company -->
@@ -32,7 +32,7 @@
                 android:id="@+id/textViewTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Auckland Rangers"
+                android:text="@string/company_name"
                 android:textSize="50sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
@@ -44,7 +44,7 @@
                 android:id="@+id/textViewTitle1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Discover and Enjoy Food"
+                android:text="@string/company_subname"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
@@ -56,7 +56,7 @@
                 android:id="@+id/textViewMyAccount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="My Account"
+                android:text="@string/my_account"
                 android:textSize="40sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
@@ -69,7 +69,8 @@
                 android:id="@+id/editTextUsername"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
-                android:hint="  Username*"
+                android:hint="@string/enter_username"
+                android:inputType="text"
                 android:textColorHint="@android:color/darker_gray"
                 android:background="@drawable/white_button_border"
                 android:textSize="25sp"
@@ -87,7 +88,7 @@
                 android:id="@+id/editTextPassword"
                 android:layout_width="match_parent"
                 android:layout_height="75dp"
-                android:hint=" Password*"
+                android:hint="@string/password_hint"                
                 android:textColorHint="@android:color/darker_gray"
                 android:background="@drawable/white_button_border"
                 android:inputType="textPassword"
@@ -106,7 +107,7 @@
                 android:id="@+id/textViewForgot"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Forgot Username or Password?"
+                android:text="@string/forgot_userpass"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/holo_red_light"
@@ -123,7 +124,7 @@
     </FrameLayout>    
 
     <!-- Navigation Selection -->
-<LinearLayout
+    <LinearLayout
         android:id="@+id/navigationSection"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -138,7 +139,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Sign Up"
+            android:text="@string/sign_up_btn"
             android:background="@drawable/white_button_border"
             android:textColor="@android:color/black"
             android:padding="16dp"
@@ -152,7 +153,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Login"
+            android:text="@string/log_in_btn"
             android:background="@drawable/light_blue_color_round"
             android:textColor="@android:color/white"
             android:padding="16dp"
