--- a/SWD607_Assignment2/Resources/layout/Reservation.xml
+++ b/SWD607_Assignment2/Resources/layout/Reservation.xml
@@ -9,10 +9,10 @@
         android:id="@+id/buttonBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/back_button_image"
-        android:text="Back"
+        android:src="@drawable/back_button_image"        
         android:textColor="@android:color/black"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/buttonBack"
         android:layout_alignParentStart="true"
         android:layout_marginStart="30dp"
         android:layout_marginTop="16dp"/>
@@ -22,7 +22,7 @@
         android:id="@+id/textViewReservation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Reservation List"
+        android:text="@string/reservation_list"
         android:padding="40dp"
         android:textSize="40sp"
         android:textStyle="bold"
@@ -35,7 +35,7 @@
         android:id="@+id/editTextLastName"
         android:layout_width="match_parent"
         android:layout_height="390dp"
-        android:hint="Lists"
+        android:hint="@string/lists_hint"
         android:background="@drawable/gray_button"
         android:textSize="25sp"
         android:gravity="top|start"
@@ -50,7 +50,7 @@
         android:id="@+id/buttonAddEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add / Edit"
+        android:text="@string/add_edit_button"
         android:textSize="30sp"
         android:textStyle="bold"
         android:background="@drawable/blue_button"
@@ -67,7 +67,7 @@
         android:id="@+id/buttonDelete"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Delete"
+        android:text="@string/delete_button"
         android:textSize="30sp"
         android:textStyle="bold"
         android:background="@drawable/blue_button"
@@ -76,7 +76,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
         android:layout_marginTop="25dp"
-        android:layout_below="@+id/buttonAddEdit"
+        android:layout_below="@id/buttonAddEdit"
         android:layout_centerHorizontal="true"
         android:textAllCaps="false"/>
 
