--- a/SWD607_Assignment2/Resources/layout/PaymentOption.xml
+++ b/SWD607_Assignment2/Resources/layout/PaymentOption.xml
@@ -9,8 +9,8 @@
         android:id="@+id/buttonBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/back_button_image"
-        android:text="Back"
+        android:src="@drawable/back_button_image"       
+        android:contentDescription="@string/buttonBack"
         android:textColor="@android:color/black"
         android:background="@android:color/transparent"
         android:layout_alignParentStart="true"
@@ -22,7 +22,7 @@
         android:id="@+id/textViewPayment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Payment"
+        android:text="@string/payment_title"
         android:textSize="30sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
@@ -50,7 +50,7 @@
                             android:id="@+id/textViewAmount"
                             android:layout_width="wrap_content"
                             android:layout_height="80dp"
-                            android:text="Total Amount :"
+                            android:text="@string/total_amount"
                             android:textSize="35sp"
                             android:gravity="center_vertical|start"
                             android:textStyle="bold"
@@ -61,7 +61,7 @@
                             android:id="@+id/textViewTotalAmount"
                             android:layout_width="wrap_content"
                             android:layout_height="80dp"
-                            android:text=" $"
+                            android:text="@string/price_total_amount"
                             android:layout_toRightOf="@+id/textViewAmount"
                             android:textSize="35sp"
                             android:gravity="center_vertical|start"
@@ -78,7 +78,7 @@
         android:id="@+id/textViewChooseOption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Choose Payment Option"
+        android:text="@string/choose_payment_option"
         android:textSize="30sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
@@ -93,7 +93,7 @@
         android:id="@+id/buttonCash"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Cash"
+        android:text="@string/cash_payment"
         android:textSize="30sp"
         android:textStyle="bold"
         android:background="@drawable/light_blue_color_round"
@@ -111,7 +111,7 @@
         android:id="@+id/buttonCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Credit / Debit Card"
+        android:text="@string/card_payment"
         android:textSize="30sp"
         android:textStyle="bold"
         android:background="@drawable/light_blue_color_round"
@@ -129,7 +129,7 @@
         android:id="@+id/textViewRating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Rating"
+        android:text="@string/rating_star"
         android:textSize="30sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
@@ -170,7 +170,7 @@
         android:id="@+id/buttonProceedToPayment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="@string/submit_button_text"
         android:textSize="30sp"
         android:textStyle="bold"
         android:background="@drawable/light_blue_color_round"
@@ -199,36 +199,36 @@
             android:layout_width="0dp"
             android:src="@drawable/home_button_image"
             android:background="@android:color/white"
+            android:contentDescription="@string/imageViewLogo"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Home" />
+            android:layout_weight="1"/>
 
         <ImageButton
             android:id="@+id/buttonSearch"
             android:layout_width="0dp"
             android:src="@drawable/search_button_image"
             android:background="@android:color/white"
+            android:contentDescription="@string/imageViewLogo"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Search" />
+            android:layout_weight="1"/>
 
         <ImageButton
             android:id="@+id/buttonContactUs"
             android:layout_width="0dp"
             android:src="@drawable/contact_button_image"
             android:background="@android:color/white"
+            android:contentDescription="@string/imageViewLogo"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Contact Us" />
+            android:layout_weight="1"/>
 
         <ImageButton
             android:id="@+id/buttonProfile"
             android:layout_width="0dp"
             android:src="@drawable/profile_button_image"
             android:background="@android:color/white"
+            android:contentDescription="@string/imageViewLogo"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Profile" />
+            android:layout_weight="1"/>
     </LinearLayout>
 
 </RelativeLayout>
