--- a/SWD607_Assignment2/Resources/layout/Profile.xml
+++ b/SWD607_Assignment2/Resources/layout/Profile.xml
@@ -11,11 +11,12 @@
         android:layout_height="160dp"
         android:layout_gravity="center"
         android:src="@drawable/aucklandrangerslogo2"
+        android:contentDescription="@string/imageViewLogo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="1dp"/>
     <TextView
         android:layout_width="match_parent"
-        android:text="Auckland Rangers"
+        android:text="@string/company_name"
         android:layout_height="70dp"
         android:gravity="center"
         android:id="@+id/txtName"
@@ -26,7 +27,7 @@
         />
     <TextView
         android:layout_width="match_parent"
-        android:text="Discover and Enjoy Food"
+        android:text="@string/company_subname"
         android:gravity="center"
         android:layout_height="35dp"
         android:textSize="20dp"
@@ -36,7 +37,7 @@
         />
     <TextView
         android:layout_width="match_parent"
-        android:text="My Profile"
+        android:text="@string/my_profile"
         android:gravity="center"
         android:layout_height="80dp"
         android:textSize="35dp"
@@ -51,10 +52,12 @@
         android:textSize="25dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:paddingStart="15dp"
+        android:inputType="text"
         android:textColor="@android:color/background_dark"
         android:id="@+id/txtUsername"
         android:textColorHint="@android:color/darker_gray"
-        android:hint="  Username*"
+        android:hint="@string/enter_username"
         android:background="@drawable/white_button_border" 
         android:layout_marginTop="320dp"
         />
@@ -64,9 +67,11 @@
         android:textSize="25dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:paddingStart="15dp"
+        android:inputType="textVisiblePassword"
         android:textColor="@android:color/background_dark"
         android:id="@+id/txtPassword"
-        android:hint="  Password*"
+        android:hint="@string/password_hint"
         android:textColorHint="@android:color/darker_gray"
         android:background="@drawable/white_button_border"
         android:layout_marginTop="400dp"
@@ -80,7 +85,9 @@
             android:id="@+id/editTextFirstName"
             android:layout_width="230dp"
             android:layout_height="60dp"
-            android:hint="  First Name*"
+            android:hint="@string/first_name"
+            android:inputType="text"
+            android:paddingStart="15dp"
             android:textColorHint="@android:color/darker_gray"
             android:background="@drawable/white_button_border"
             android:textSize="25sp"
@@ -91,11 +98,13 @@
             android:id="@+id/editTextLastName"
             android:layout_width="317.5dp"
             android:layout_height="60dp"
-            android:hint="  Last Name*"
+            android:hint="@string/last_name"
+            android:inputType="text"
             android:layout_toRightOf="@+id/editTextFirstName"
             android:textColorHint="@android:color/darker_gray"
             android:background="@drawable/white_button_border"
             android:textSize="25sp"
+            android:paddingStart="15dp"
             android:layout_marginTop="20dp"
             android:layout_marginStart="10dp"/>
         </RelativeLayout>
@@ -103,11 +112,13 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:textSize="25dp"
+        android:inputType="phone"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:paddingStart="15dp"
         android:textColor="@android:color/background_dark"
         android:id="@+id/txtPhone"
-        android:hint="  Mobile Number*"
+        android:hint="@string/mobile_number"
         android:textColorHint="@android:color/darker_gray"
         android:background="@drawable/white_button_border"
         android:layout_marginTop="560dp"
@@ -119,9 +130,11 @@
         android:textSize="25dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:inputType="textEmailAddress"
         android:textColor="@android:color/background_dark"
         android:id="@+id/txtEmail"
-        android:hint="  Email*"
+        android:hint="@string/email_address"
+        android:paddingStart="15dp"
         android:textColorHint="@android:color/darker_gray"
         android:background="@drawable/white_button_border"
         android:layout_marginTop="640dp"
@@ -134,7 +147,7 @@
         android:layout_marginTop="725dp"
         android:layout_marginLeft="20dp"
         android:background="@drawable/white_button_border"
-        android:text="Update"
+        android:text="@string/update_button"
         android:textSize="25dp"
         android:textColor="@android:color/background_dark"
         android:textAllCaps="false"     
@@ -146,7 +159,7 @@
         android:layout_marginTop="725dp"
         android:layout_marginLeft="320dp"
         android:background="@drawable/light_blue_color_round"
-        android:text="Delete Account"
+        android:text="@string/delete_account"
         android:textSize="25dp"
         android:textColor="@android:color/white"
         android:textAllCaps="false"/>
