Menu and Order Detail String Warning Fixed

--- a/SWD607_Assignment2/Resources/layout/Menu.xml
+++ b/SWD607_Assignment2/Resources/layout/Menu.xml
@@ -12,6 +12,7 @@
         android:src="@drawable/cart_button_image"   
         android:textColor="@android:color/black"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/imageViewLogo"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="40dp"
         android:layout_marginTop="16dp"/>
@@ -21,7 +22,7 @@
         android:id="@+id/textViewTitleCompany"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Auckland Rangers"
+        android:text="@string/company_name"
         android:textSize="35sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
@@ -35,6 +36,7 @@
         android:src="@drawable/buffet"
         android:scaleType="centerCrop"
         android:layout_below="@+id/textViewTitleCompany"
+        android:contentDescription="@string/imageViewLogo"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="10dp"
@@ -52,7 +54,8 @@
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="5dp"
-            android:layout_height="110dp"            
+            android:layout_height="110dp"
+            android:contentDescription="@string/imageViewLogo"
             android:layout_margin="5dp"
             android:background="@drawable/burger"            
             android:layout_weight="0.5"
@@ -62,6 +65,7 @@
             android:id="@+id/imageView2"
             android:layout_width="5dp"
             android:layout_height="110dp"
+            android:contentDescription="@string/imageViewLogo"
             android:layout_margin="5dp"
             android:background="@drawable/burger2"            
             android:layout_weight="0.5"
@@ -71,6 +75,7 @@
             android:id="@+id/imageView4"
             android:layout_width="5dp"
             android:layout_height="110dp"
+            android:contentDescription="@string/imageViewLogo"
             android:layout_margin="5dp"
             android:background="@drawable/burger2"            
             android:layout_weight="0.5"
@@ -90,7 +95,7 @@
             android:id="@+id/textViewExplore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Explore"
+            android:text="@string/explore_print"
             android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginTop="5dp"
@@ -100,7 +105,7 @@
             android:id="@+id/textViewMoreOptions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="More options"
+            android:text="@string/more_options"
             android:textSize="20sp"            
             android:layout_marginTop="5dp"            
             android:textColor="@android:color/black"      
@@ -117,7 +122,7 @@
                             android:id="@+id/buttonReservations"
                             android:layout_width="190dp"
                             android:layout_height="65dp"
-                            android:text="Reservations"
+                            android:text="@string/reservations_btn"
                             android:textSize="20sp"        
                             android:background="@drawable/white_button_border"
                             android:textColor="@android:color/black"
@@ -130,7 +135,7 @@
                             android:id="@+id/buttonMenuLists"
                             android:layout_width="190dp"
                             android:layout_height="65dp"
-                            android:text="Menu List"
+                            android:text="@string/menu_lists"
                             android:textSize="20sp"        
                             android:background="@drawable/white_button_border"
                             android:textColor="@android:color/black"
@@ -145,7 +150,7 @@
             android:id="@+id/textViewFeaturedItems"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Featured items"
+            android:text="@string/featured_items"
             android:textSize="20sp"     
             android:layout_marginTop="130dp"
             android:textColor="@android:color/black"      
@@ -154,7 +159,7 @@
             android:id="@+id/textViewAll"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="View all"
+            android:text="@string/view_all"
             android:textSize="20sp"            
             android:layout_marginTop="130dp"            
             android:textColor="@android:color/black"      
@@ -174,6 +179,7 @@
             android:layout_width="170dp"
             android:layout_height="95dp"
             android:layout_margin="15dp"
+            android:contentDescription="@string/imageViewLogo"    
             android:background="@drawable/food_feature_1" />
 
             <TextView
@@ -193,7 +199,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/cart_button_image"
-            android:text="Back"
+            android:contentDescription="@string/imageViewLogo"           
             android:textColor="@android:color/black"
             android:background="@drawable/white_button_border"
             android:layout_alignParentEnd="true"
@@ -215,7 +221,8 @@
             android:layout_width="170dp"
             android:layout_height="95dp"
             android:layout_margin="15dp"
-            android:background="@drawable/food_feature_2" />
+            android:background="@drawable/food_feature_2" 
+            android:contentDescription="@string/imageViewLogo"/>
 
             <TextView
             android:id="@+id/textViewFeature2"
@@ -235,6 +242,7 @@
             android:layout_height="wrap_content"
             android:src="@drawable/cart_button_image"           
             android:textColor="@android:color/black"
+            android:contentDescription="@string/imageViewLogo"
             android:background="@drawable/white_button_border"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="140dp"
@@ -263,7 +271,7 @@
             android:background="@android:color/white"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Home" />
+            android:contentDescription="@string/imageViewLogo"/>
 
         <ImageButton
             android:id="@+id/buttonSearch"
@@ -272,7 +280,7 @@
             android:background="@android:color/white"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Search" />
+            android:contentDescription="@string/imageViewLogo"/>
 
         <ImageButton
             android:id="@+id/buttonContactUs"
@@ -281,7 +289,7 @@
             android:background="@android:color/white"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Contact Us" />
+            android:contentDescription="@string/imageViewLogo"/>
 
         <ImageButton
             android:id="@+id/buttonProfile"
@@ -290,7 +298,7 @@
             android:background="@android:color/white"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Profile" />
+            android:contentDescription="@string/imageViewLogo"/>
     </LinearLayout>
 
 </RelativeLayout>
