--- a/SWD607_Assignment2/Resources/layout/ContactUs.xml
+++ b/SWD607_Assignment2/Resources/layout/ContactUs.xml
@@ -22,7 +22,7 @@
                 android:id="@+id/textViewContact"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Contact"
+                android:text="@string/contact_title"
                 android:textSize="40sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
@@ -34,7 +34,7 @@
                 android:id="@+id/textViewName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Enter your name"
+                android:text="@string/enter_your_name"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
@@ -45,11 +45,12 @@
                 android:id="@+id/editTextCustomerName"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:hint="  Name"
+                android:hint="@string/full_name"
                 android:textColorHint="@android:color/darker_gray"
                 android:background="@drawable/white_button_border"
+                android:inputType="text"
                 android:textSize="25sp"
-                android:paddingStart="12dp"
+                android:paddingStart="15dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginEnd="15dp" />
@@ -59,7 +60,7 @@
                 android:id="@+id/textViewCustomerEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Email"
+                android:text="@string/email_tag"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
@@ -70,8 +71,9 @@
                 android:id="@+id/editTextCustomerEmail"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:hint="  Email Address"
-                android:paddingStart="12dp"
+                android:hint="@string/email_address"
+                android:paddingStart="15dp"
+                android:inputType="textEmailAddress"
                 android:textColorHint="@android:color/darker_gray"
                 android:background="@drawable/white_button_border"
                 android:textSize="25sp"
@@ -84,7 +86,7 @@
                 android:id="@+id/textViewSubject"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Subject"
+                android:text="@string/subject_tag"
                 android:textSize="25sp"
                 android:paddingStart="20dp"
                 android:textStyle="bold"
@@ -95,8 +97,9 @@
                 android:id="@+id/editTextSubject"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:hint="  Subject"
-                android:paddingStart="12dp"
+                android:hint="@string/subject_hint"
+                android:paddingStart="15dp"
+                android:inputType="text"
                 android:textColorHint="@android:color/darker_gray"
                 android:background="@drawable/white_button_border"
                 android:textSize="25sp"
@@ -109,7 +112,7 @@
                 android:id="@+id/textViewMessage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Write your message"
+                android:text="@string/message_tag"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black"
@@ -120,9 +123,10 @@
                 android:id="@+id/editTextMessage"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:hint="  Message"
+                android:hint="@string/message_hint"
                 android:gravity="top|start"
-                android:paddingStart="12dp"
+                android:paddingStart="15dp"
+                android:inputType="text"
                 android:textColorHint="@android:color/darker_gray"
                 android:background="@drawable/white_button_border"
                 android:textSize="25sp"
@@ -134,7 +138,7 @@
                 android:id="@+id/buttonSend"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Send"
+                android:text="@string/message_send_btn"
                 android:textSize="30sp"
                 android:textStyle="bold"
                 android:background="@drawable/gray_button"
@@ -151,7 +155,8 @@
                 android:layout_height="350dp"
                 android:src="@drawable/restaurant1"
                 android:layout_marginTop="1dp"
-                android:layout_centerHorizontal="true"/>
+                android:layout_centerHorizontal="true"
+                android:contentDescription="@string/imageViewLogo"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -164,7 +169,7 @@
                     android:id="@+id/textViewStoreEmail"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Email"
+                    android:text="@string/email_tag"
                     android:textSize="30sp"
                     android:textStyle="bold"
                     android:textColor="@android:color/black"
@@ -175,7 +180,7 @@
                     android:id="@+id/textViewStoreEmailAddress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Rangers.Auckland@gmail.com"
+                    android:text="@string/company_email"
                     android:textSize="25sp"
                     android:textStyle="bold"
                     android:textColor="@android:color/black"
@@ -187,7 +192,7 @@
                     android:id="@+id/textViewStoreAddress"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Address"
+                    android:text="@string/address_tag"
                     android:textSize="30sp"
                     android:textStyle="bold"
                     android:textColor="@android:color/black"
@@ -198,7 +203,7 @@
                     android:id="@+id/textViewStoreAddress1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="238 Queen Street, Auckland CBD"
+                    android:text="@string/address_print1"
                     android:textSize="25sp"
                     android:textStyle="bold"
                     android:textColor="@android:color/black"
@@ -209,7 +214,7 @@
                     android:id="@+id/textViewStoreAddress2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Auckland 1010"
+                    android:text="@string/address_print2"
                     android:textSize="25sp"
                     android:textStyle="bold"
                     android:textColor="@android:color/black"
@@ -220,7 +225,7 @@
                     android:id="@+id/textViewPhoneNumber"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Phone Number"
+                    android:text="@string/phonenumber_tag"
                     android:textSize="30sp"
                     android:textStyle="bold"
                     android:textColor="@android:color/black"
@@ -231,7 +236,7 @@
                     android:id="@+id/textViewPhoneNumber1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="09 827 6100"
+                    android:text="@string/phonenumber_print"
                     android:textSize="25sp"
                     android:textStyle="bold"
                     android:textColor="@android:color/black"
@@ -242,7 +247,7 @@
                     android:id="@+id/textViewOpeningHours"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Open Hours"
+                    android:text="@string/openhours_tag"
                     android:textSize="30sp"
                     android:textStyle="bold"
                     android:textColor="@android:color/black"
@@ -253,7 +258,7 @@
                     android:id="@+id/textViewDays"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Monday to Sunday"
+                    android:text="@string/openhours_days"
                     android:textSize="25sp"
                     android:textStyle="bold"
                     android:textColor="@android:color/black"
@@ -264,7 +269,7 @@
                     android:id="@+id/textViewTime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="10:00am to 11:00pm"
+                    android:text="@string/openhours_time"
                     android:textSize="25sp"
                     android:textStyle="bold"
                     android:textColor="@android:color/black"
@@ -275,7 +280,7 @@
                     android:id="@+id/textViewFindUs"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Find Us Here"
+                    android:text="@string/find_us_here"
                     android:textSize="40sp"
                     android:textStyle="bold"
                     android:textColor="@android:color/black"
@@ -288,7 +293,8 @@
                     android:layout_height="350dp"
                     android:src="@drawable/restaurant2"
                     android:layout_marginTop="1dp"
-                    android:layout_centerHorizontal="true"/>
+                    android:layout_centerHorizontal="true"
+                    android:contentDescription="@string/imageViewLogo"/>
 
             </LinearLayout>
 
@@ -313,7 +319,7 @@
             android:background="@android:color/white"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Home" />
+            android:contentDescription="@string/imageViewLogo"/>
 
         <ImageButton
             android:id="@+id/buttonSearch"
@@ -322,7 +328,7 @@
             android:background="@android:color/white"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Search" />
+            android:contentDescription="@string/imageViewLogo"/>
 
         <ImageButton
             android:id="@+id/buttonContactUs"
@@ -331,7 +337,7 @@
             android:background="@android:color/white"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Contact Us" />
+            android:contentDescription="@string/imageViewLogo"/>
 
         <ImageButton
             android:id="@+id/buttonProfile"
@@ -340,7 +346,7 @@
             android:background="@android:color/white"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Profile" />
+            android:contentDescription="@string/imageViewLogo"/>
     </LinearLayout>
 
 </LinearLayout>
