AddEdit Reservation String Warning Fixed

--- a/SWD607_Assignment2/Resources/layout/AddEdit.xml
+++ b/SWD607_Assignment2/Resources/layout/AddEdit.xml
@@ -8,11 +8,11 @@
     <ImageButton
         android:id="@+id/buttonBack"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Back"
+        android:layout_height="wrap_content"       
         android:src="@drawable/back_button_image"
         android:textColor="@android:color/black"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/imageViewLogo"
         android:layout_alignParentStart="true"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"/>
@@ -22,7 +22,7 @@
         android:id="@+id/textViewReservation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Make Reservation"
+        android:text="@string/reservation_tag"
         android:textSize="40sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
@@ -34,7 +34,7 @@
         android:id="@+id/textAucklandRangers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Auckland Rangers"
+        android:text="@string/company_name"
         android:textSize="35sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"
@@ -76,7 +76,7 @@
                             android:id="@+id/textlabelSpinner"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Number : "
+                            android:text="@string/number_tag"
                             android:paddingStart="16dp"
                             android:textSize="25sp"
                             android:textStyle="bold"
@@ -118,11 +118,13 @@
                         android:id="@+id/editTextLists"
                         android:layout_width="match_parent"
                         android:layout_height="400dp"
-                        android:hint=" Lists"
-                        android:background="@drawable/gray_button"
+                        android:hint="@string/lists_hint"
+                        android:inputType="text"
+                        android:background="@drawable/gray_button"                   
                         android:textSize="30sp"
                         android:textStyle="bold"
                         android:layout_below="@+id/timePicker1"
+                        android:paddingStart="15dp"
                         android:layout_marginTop="15dp"
                         android:layout_marginStart="30dp"
                         android:layout_marginEnd="30dp" />
@@ -131,7 +133,7 @@
                         android:id="@+id/buttonAdd"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Add"
+                        android:text="@string/add_button"
                         android:textSize="25sp"
                         android:textStyle="bold"
                         android:background="@drawable/blue_button"
@@ -148,7 +150,7 @@
                         android:id="@+id/buttonEdit"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Edit"
+                        android:text="@string/edit_button"
                         android:textSize="25sp"
                         android:textStyle="bold"
                         android:background="@drawable/blue_button"
