deleted unnecessary images and uploaded the final images of foods

--- a/SWD607_Assignment2/Resources/layout/Menu.xml
+++ b/SWD607_Assignment2/Resources/layout/Menu.xml
@@ -30,11 +30,10 @@
         android:layout_marginTop="16dp" />
 
     <ImageView      
-        android:layout_width="wrap_content"
-        android:layout_height="160dp"        
+        android:layout_width="900dp"
+        android:layout_height="170dp"        
         android:background="@drawable/image_round_corner"
-        android:src="@drawable/buffet"
-        android:scaleType="centerCrop"
+        android:src="@drawable/main_menu_head"    
         android:layout_below="@+id/textViewTitleCompany"
         android:contentDescription="@string/imageViewLogo"
         android:layout_marginStart="10dp"
@@ -54,30 +53,30 @@
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="5dp"
-            android:layout_height="110dp"
+            android:layout_height="115dp"
             android:contentDescription="@string/imageViewLogo"
             android:layout_margin="5dp"
-            android:background="@drawable/burger"            
+            android:background="@drawable/whitebait_fritters3"            
             android:layout_weight="0.5"
             />
 
         <ImageView
             android:id="@+id/imageView2"
             android:layout_width="5dp"
-            android:layout_height="110dp"
+            android:layout_height="115dp"
             android:contentDescription="@string/imageViewLogo"
             android:layout_margin="5dp"
-            android:background="@drawable/burger2"            
+            android:background="@drawable/southland_cheese1"            
             android:layout_weight="0.5"
             />
 
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="5dp"
-            android:layout_height="110dp"
+            android:layout_height="115dp"
             android:contentDescription="@string/imageViewLogo"
             android:layout_margin="5dp"
-            android:background="@drawable/burger2"            
+            android:background="@drawable/pavlova4"            
             android:layout_weight="0.5"
             />       
     </LinearLayout>   
@@ -120,28 +119,28 @@
                         android:id="@+id/relativeLayoutButtons">           
                         <Button
                             android:id="@+id/buttonReservations"
-                            android:layout_width="190dp"
-                            android:layout_height="65dp"
+                            android:layout_width="170dp"
+                            android:layout_height="60dp"
                             android:text="@string/reservations_btn"
                             android:textSize="20sp"        
                             android:background="@drawable/white_button_border"
                             android:textColor="@android:color/black"
-                            android:padding="20dp"
+                            android:padding="5dp"
                             android:layout_marginTop="50dp"
-                            android:layout_marginStart="60dp"
+                            android:layout_marginStart="75dp"
                             android:layout_marginEnd="60dp"                                           
                             android:textAllCaps="false"/>
                         <Button
                             android:id="@+id/buttonMenuLists"
-                            android:layout_width="190dp"
-                            android:layout_height="65dp"
+                            android:layout_width="170dp"
+                            android:layout_height="60dp"
                             android:text="@string/menu_lists"
                             android:textSize="20sp"        
                             android:background="@drawable/white_button_border"
                             android:textColor="@android:color/black"
-                            android:padding="20dp"
+                            android:padding="5dp"
                             android:layout_marginTop="50dp"
-                            android:layout_marginStart="320dp"
+                            android:layout_marginStart="325dp"
                             android:layout_marginEnd="60dp"                                           
                             android:textAllCaps="false"/>
                     </RelativeLayout>
@@ -151,7 +150,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/featured_items"
-            android:textSize="20sp"     
+            android:textSize="20sp"
+            android:textStyle="bold"
             android:layout_marginTop="130dp"
             android:textColor="@android:color/black"      
             android:layout_marginStart="20dp" />
@@ -180,7 +180,7 @@
             android:layout_height="95dp"
             android:layout_margin="15dp"
             android:contentDescription="@string/imageViewLogo"    
-            android:background="@drawable/food_feature_1" />
+            android:background="@drawable/hokey_pokey4" />
 
             <TextView
             android:id="@+id/textViewFeature1"
@@ -221,7 +221,7 @@
             android:layout_width="170dp"
             android:layout_height="95dp"
             android:layout_margin="15dp"
-            android:background="@drawable/food_feature_2" 
+            android:background="@drawable/onion_dip1" 
             android:contentDescription="@string/imageViewLogo"/>
 
             <TextView
