--- a/SWD607_Assignment2/Resources/layout/FoodDescription.xml
+++ b/SWD607_Assignment2/Resources/layout/FoodDescription.xml
@@ -46,8 +46,8 @@
         android:layout_width="match_parent"
         android:layout_height="210dp"        
         android:background="@drawable/image_round_corner"
-        android:src="@drawable/buffet"
-        android:scaleType="centerCrop"
+        android:src="@drawable/pavlova3"
+        android:scaleType="fitCenter"
         android:layout_below="@+id/textViewTitleCompany"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -103,7 +103,7 @@
             android:layout_width="5dp"
             android:layout_height="100dp"            
             android:layout_margin="5dp"
-            android:background="@drawable/burger"
+            android:background="@drawable/pavlova2"
             android:contentDescription="@string/imageViewLogo"
             android:layout_weight="0.5"
             />
@@ -113,7 +113,7 @@
             android:layout_width="5dp"
             android:layout_height="100dp"
             android:layout_margin="5dp"
-            android:background="@drawable/burger2"
+            android:background="@drawable/pavlova4"
             android:contentDescription="@string/imageViewLogo"
             android:layout_weight="0.5"
             />
@@ -123,7 +123,7 @@
             android:layout_width="5dp"
             android:layout_height="100dp"
             android:layout_margin="5dp"
-            android:background="@drawable/burger2"
+            android:background="@drawable/pavlova1"
             android:contentDescription="@string/imageViewLogo"
             android:layout_weight="0.5"
             />       
