--- a/SWD607_Assignment2/Resources/layout/OrderDetail.xml
+++ b/SWD607_Assignment2/Resources/layout/OrderDetail.xml
@@ -52,7 +52,7 @@
                         android:id="@+id/Burger2"
                         android:layout_width="150dp"
                         android:layout_height="130dp"
-                        android:src="@drawable/burger2"
+                        android:src="@drawable/southland_cheese2"
                         android:contentDescription="@string/imageViewLogo"
                         android:layout_alignParentStart="true"/>
 
